--- a/startbootstrap/css/agency.css
+++ b/startbootstrap/css/agency.css
@@ -183,7 +183,7 @@ img::-moz-selection {
 header.masthead {
     text-align: center;
     color: white;
-    background-image: url("../../site/img/ft1.JPG");
+    background-image: url("../../site/img/logo2.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
